<resources>
    <string name="app_name">Showcase App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="headline">My Nanodegree App</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="score_app">Score App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="bacon_reader">Bacon Reader</string>
    <string name="capstone">Capstone: My App</string>
    <string name="popup_bottom"> </string>
    <string name="title_activity_spotify_streamer">Spotify Streamer</string>
</resources>
